error.log
    Checking praborrow-lease v0.5.0 (D:\Project\PraBorrow\crates\praborrow-lease)
error[E0046]: not all trait items implemented, missing: `update_peers`
 --> crates\praborrow-lease\tests\raft_test.rs:9:1
  |
9 | impl ConsensusNetwork for MockNetwork {
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ missing `update_peers` in implementation
  |
  = help: implement the missing item: `fn update_peers<'life0: 'async_trait, 'async_trait>(&'life0 self, _: Vec<String>) -> Pin<Box<(dyn Future<Output = Result<(), String>> + Send + 'async_trait)>> { todo!() }`

For more information about this error, try `rustc --explain E0046`.
error: could not compile `praborrow-lease` (test "raft_test") due to 1 previous error
warning: build failed, waiting for other jobs to finish...
error[E0283]: type annotations needed
   --> crates\praborrow-lease\src\raft.rs:559:59
    |
559 |         let mut node = RaftNode::new(1, network, Box::new(InMemoryStorage::new()));
    |                        -------------                      ^^^^^^^^^^^^^^^^^^^^ cannot infer type of the type parameter `T` declared on the struct `InMemoryStorage`
    |                        |
    |                        required by a bound introduced by this call
    |
    = note: cannot satisfy `_: Clone`
note: required by a bound in `raft::RaftNode::<T>::new`
   --> crates\praborrow-lease\src\raft.rs:290:9
    |
290 | impl<T: Clone + Send + 'static> RaftNode<T> {
    |         ^^^^^ required by this bound in `RaftNode::<T>::new`
...
310 |     pub fn new(
    |            --- required by a bound in this associated function
help: consider specifying the generic argument
    |
559 |         let mut node = RaftNode::new(1, network, Box::new(InMemoryStorage::<T>::new()));
    |                                                                          +++++

For more information about this error, try `rustc --explain E0283`.
error: could not compile `praborrow-lease` (lib test) due to 1 previous error
